project3 added with updates

--- a/project3.ipynb
+++ b/project3.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# **Whose Streets? Gender Representation in NYC Street Names**\n",
+    "# **PROJECT 3: Whose Streets? Gender Representation in NYC Street Names**\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "200d6b34",
    "metadata": {},
    "outputs": [],
@@ -120,6 +120,9 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
+    "\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = \"notebook_connected+plotly_mimetype\"\n",
     "\n",
     "pd.set_option(\"display.max_columns\", 50)\n",
     "pd.set_option(\"display.precision\", 3)"
@@ -139,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e0310cbf",
    "metadata": {},
    "outputs": [
@@ -581,7 +584,7 @@
        "[5 rows x 64 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13058,7 +13061,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
